--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "eslint": "^9.1.1",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^3.1.0"
   }
 }
