--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node --env-file=.env --watch index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +13,6 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "http-errors": "^2.0.0",
@@ -26,7 +24,6 @@
   },
   "devDependencies": {
     "eslint": "^9.1.1",
-    "eslint-config-google": "^0.14.0",
-    "nodemon": "^3.1.0"
+    "eslint-config-google": "^0.14.0"
   }
 }
