--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "pharmacy-medicines-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node --env-file=.env --watch index.js"
+    "start": "node --env-file=.env.local --watch index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +22,10 @@
     "multer": "^1.4.5-lts.1",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
+  },
+  "devDependencies": {
+    "@fullstacksjs/eslint-config": "^11.5.0",
+    "eslint": "^9.21.0",
+    "prettier": "^3.5.2"
   }
 }
