--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --env-file=.env.local --watch index.js",
+    "start": "node --env-file=.env --watch index.js",
     "prettier:check": "prettier . --check",
     "prettier:write": "prettier . --write",
     "lint": "eslint . --fix"
