feat: refactor compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 name: pharmacy
 services:
   backend:
@@ -6,8 +5,12 @@ services:
     ports:
       - 3000:3000
     env_file:
-      - .env.local
+      - .env
   database:
     image: mongo:6.0.12-jammy
     ports:
       - 27017:27017
+    volumes:
+      - mydb:/data/db
+volumes:
+  mydb:
