feat: update .prettierrc config

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "printWidth": 80,
   "singleQuote": false,
   "semi": true,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "jsxSingleQuote": false
 }
